fix: added sleep to reduce number of server queries per second
Signed-off-by: bamiesking <bamiesking@gmail.com>
Signed-off-by: Ben Amies-King <bamiesking@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "ukie-server"]
 	path = ukie-server
 	url = https://github.com/QLabsYCQT/ukie-server
+[submodule "yqcinst"]
+	path = yqcinst
+	url = https://github.com/QLabsYCQT/yqcinst
+	branch = keithley2231a
